force-app/main/default/objects/Activismo_Error__c/Activismo_Error__c.object-meta.xml
<CustomObject>
    <label>Activismo Error</label>
    <nameField>
        <label>Activismo Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activismo Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>