force-app/main/default/objects/Activismo_Error__c/fields/Actividad_SFID__c.field-meta.xml
<CustomField>
    <fullName>Actividad_SFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actividad SFID</label>
    <referenceTo>Actividad__c</referenceTo>
    <relationshipLabel>Activismo Errors</relationshipLabel>
    <relationshipName>Activismo_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>