force-app/main/default/objects/Activismo_Error__c/fields/Flow_Error__c.field-meta.xml
<CustomField>
    <fullName>Flow_Error__c</fullName>
    <label>Flow Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>