force-app/main/default/objects/Activismo_Error__c/fields/Votante_SFID__c.field-meta.xml
<CustomField>
    <fullName>Votante_SFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Votante SFID</label>
    <referenceTo>Votante__c</referenceTo>
    <relationshipLabel>Activismo Errors</relationshipLabel>
    <relationshipName>Activismo_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>